--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   buttons_tabbar: ^1.3.7+1
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  dot_navigation_bar: ^1.0.2
+  floating_bottom_navigation_bar: ^1.5.2
+
+  provider: 
 
 dev_dependencies:
   flutter_test:
